--- a/app/templates/app/add_data.html
+++ b/app/templates/app/add_data.html
@@ -2,13 +2,20 @@
 {% load static %}
 
 {% block content %}
-<a href="{% url 'app:index' %}">Home</a>
-<a href="{% url 'app:see_data' %}">See data</a>
-<form action="{% url 'app:add_data' %}" method="post" class="form" id="1">
-    {% csrf_token %}
-</form>
-<button type="submit" form="1">ok</button>
-<button type="submit" name="reset" form="1">reset</button>
-<button class="add">add</button>
+<div class="btns2">
+    <a class="link2" href="{% url 'app:index' %}">Home</a>
+    <a class="link2" href="{% url 'app:see_data' %}">See data</a>
+</div>
+<div class="add-data">
+    <div class="form-btns">
+        <button class="btn" id="add">Add field</button>
+        <button class="btn" type="submit" form="1">Save</button>
+        <button class="btn" type="submit" name="reset" form="1">Reset</button>
+    </div>
+    <form action="{% url 'app:add_data' %}" method="post" class="form" id="1">
+        {% csrf_token %}
+    </form>
+   
+</div>
 <script type="module" src="{% static 'app/script.js' %}"></script>
 {% endblock content %}
