--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="{% static 'app/style.css' %}">
 </head>
 <body>
-{% block content %}
-{% endblock content %}
+    <div class="container">
+    {% block content %}
+    {% endblock content %}
+    </div>
 </body>
 </html>
