--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -82,7 +82,7 @@ h1, h2, h3, h4, h5, h6 {
     column-gap: 10px;
 }
 
-.btn {
+.btn, .btn2 {
     width: 130px;
     height: 50px;
     text-transform: uppercase;
@@ -91,6 +91,12 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
     background-color: rgb(211, 206, 196);
     cursor: pointer;
+}
+
+.btn2 {
+    color: #000;
+    text-align: center;
+    line-height: 50px;
 }
 
 .form {
